--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,15 @@
-aniso8601==9.0.1
-asgiref==3.7.2
-async-timeout==4.0.3
-attrs==23.2.0
-autobahn==23.6.2
-Automat==22.10.0
-beautifulsoup4==4.12.3
-blinker==1.8.2
-bs4==0.0.2
-certifi==2024.7.4
-cffi==1.16.0
-channels==4.1.0
-channels-redis==4.2.0
-charset-normalizer==3.3.2
-chromedriver==2.24.1
-click==8.1.7
-constantly==23.10.4
-contourpy==1.2.1
-cryptography==43.0.0
-cycler==0.12.1
-daphne==4.0.0
-Deprecated==1.2.14
-Django==3.2
-django-cors-headers==4.4.0
-django-environ==0.11.2
-djangorestframework==3.14.0
+asgiref==3.8.1
+Django==5.1.2
+django-filter==24.3
+djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
-drf-yasg==1.21.7
-exceptiongroup==1.2.2
-filelock==3.15.4
-Flask==3.0.3
-Flask-RESTful==0.3.10
-fonttools==4.53.1
-fsspec==2024.6.1
-gunicorn==22.0.0
-h11==0.14.0
-hyperlink==21.0.0
-idna==3.7
-incremental==24.7.2
+drf-yasg==1.21.8
 inflection==0.5.1
-itsdangerous==2.2.0
-Jinja2==3.1.4
-kiwisolver==1.4.5
-MarkupSafe==2.1.5
-matplotlib==3.9.1.post1
-mpmath==1.3.0
-msgpack==1.0.8
-networkx==3.3
-numpy==2.0.1
-opencv-python==4.10.0.84
-outcome==1.3.0.post0
 packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-psutil==6.0.0
-psycopg2-binary==2.9.9
-py-cpuinfo==9.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-PyJWT==2.8.0
-pyOpenSSL==24.2.1
-pyparsing==3.1.2
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.1
-redis==5.0.8
-requests==2.32.3
-scipy==1.14.1
-seaborn==0.13.2
-selenium==4.23.1
-service-identity==24.1.0
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-sqlparse==0.4.4
-sympy==1.13.1
-tomli==2.0.1
-torch==2.4.0
-torchvision==0.19.0
-tqdm==4.66.5
-trio==0.26.0
-trio-websocket==0.11.1
-Twisted==24.3.0
-txaio==23.1.1
-typing_extensions==4.10.0
-tzdata==2024.1
-ultralytics==8.3.5
-ultralytics-thop==2.0.9
+pillow==11.0.0
+PyJWT==2.9.0
+pytz==2024.2
+PyYAML==6.0.2
+sqlparse==0.5.1
+typing_extensions==4.12.2
 uritemplate==4.1.1
-urllib3==2.2.2
-websocket-client==1.8.0
-Werkzeug==3.0.3
-whitenoise==6.7.0
-wrapt==1.16.0
-wsproto==1.2.0
-zope.interface==6.4.post2
